--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -35,22 +35,30 @@
  */
 
 /* Prevent scroll on narrow devices */
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+@import url('https://fonts.googleapis.com/css?family=Cardo');
 html,
 body {
   overflow-x: hidden;
 }
 
 html {
-  font-family: "PT Serif", Georgia, "Times New Roman", serif;
+  font-family: Georgia, "PT Serif", "Times New Roman", serif;
 }
-
-h1, h2, h3, h4, h5, h6 {
-  font-family: "PT Sans", Helvetica, Arial, sans-serif;
+/*
+h1, h2 {
+  font-family: "Cardo";
   font-weight: 400;
   color: #313131;
   letter-spacing: -.025rem;
 }
-
+*/
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Open Sans", sans-serif;
+  font-weight: 400;
+  color: #313131;
+  letter-spacing: -.025rem;
+}
 
 /*
  * Wrapper
@@ -103,6 +111,7 @@ h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
   margin-bottom: 0;
   color: #505050;
+  font-family: "Cardo";
 }
 .masthead-title a {
   color: #505050;
@@ -148,7 +157,7 @@ h1, h2, h3, h4, h5, h6 {
   width: 14rem;
   visibility: hidden;
   overflow-y: auto;
-  font-family: "PT Sans", Helvetica, Arial, sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: .875rem; /* 15px */
   color: rgba(255,255,255,.6);
   background-color: #202020;
@@ -314,6 +323,7 @@ a.sidebar-nav-item:focus {
 .post-title,
 .post-title a {
   color: #303030;
+  font-family: "Cardo";
 }
 .page-title,
 .post-title {
@@ -365,7 +375,7 @@ a.sidebar-nav-item:focus {
   overflow: hidden; /* clearfix */
   margin-left: -1rem;
   margin-right: -1rem;
-  font-family: "PT Sans", Helvetica, Arial, sans-serif;
+  font-family: "Open Sans", sans-serif;
   color: #ccc;
   text-align: center;
 }
