--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -48,7 +48,7 @@ body {
 }
 
 html {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "PT Serif", Georgia, "Times New Roman", serif;
   font-size: 16px;
   line-height: 1.5;
 }
@@ -144,10 +144,10 @@ abbr[title] {
   border-bottom: 1px dotted #e5e5e5;
 }
 
-/* Code */
+/* Code , Menlo, Monaco, "Courier New", monospace; */
 code,
 pre {
-  font-family: Menlo, Monaco, "Courier New", monospace;
+    font-family: "IBM Plex Mono", Menlo, Monaco, "Courier New", monospace;
 }
 code {
   padding: .25em .5em;
