Added include to css, and removed fonts from head.html

--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -35,6 +35,7 @@
  */
 
 /* Prevent scroll on narrow devices */
+@import url('https://fonts.googleapis.com/css?family=Cardo|IBM+Plex+Mono');
 html,
 body {
   overflow-x: hidden;
