--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -553,6 +553,7 @@ a.pagination-item:hover {
     width: 100%;
     height: 0;
     padding-bottom: 56.25%;
+    margin-bottom: 15px;
 }
 .video {
     position: absolute;
