--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -95,7 +95,7 @@ h1, h2, h3, h4, h5, h6 {
 .masthead {
   padding-top:    1rem;
   padding-bottom: 1rem;
-  margin-bottom: 3rem;
+  margin-bottom: 1rem;
   border-bottom: 1px solid #eee;
 }
 .masthead-title {
@@ -318,6 +318,8 @@ a.sidebar-nav-item:focus {
 .post-title a {
   color: #303030;
   font-family: "Cardo";
+  padding-bottom: .3rem;
+  border-bottom: 1.5px solid;
 }
 .page-title,
 .post-title {
@@ -553,7 +555,7 @@ a.pagination-item:hover {
     width: 100%;
     height: 0;
     padding-bottom: 56.25%;
-    margin-bottom: 15px;
+    margin-bottom: 1rem;
 }
 .video {
     position: absolute;
