--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -204,6 +204,8 @@ blockquote p:last-child {
 }
 
 img {
+  max-width: 100%;
+  max-height: 100%;
   display: block;
   margin-left: auto;
   margin-right: auto;
