--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -224,6 +224,8 @@ td,
 th {
   padding: .25rem .5rem;
   border: 1px solid #e5e5e5;
+  font-weight: normal;
+  text-align: left;
 }
 tbody tr:nth-child(odd) td,
 tbody tr:nth-child(odd) th {
