Adding copyright date/link at bottom of pages that reacts to post date

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,5 +25,16 @@
       </div>
     </div>
 
+    <footer>
+      <div class="masttail">
+	<div class="container">
+	  <center>
+	    <h4 class="masttail-content">
+	      {% include content_license_link_longform.html %}
+	    </h4>
+	  </center>
+	</div>
+      </div>
+    </footer>
   </body>
 </html>
