--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -117,6 +117,16 @@ h1, h2, h3, h4, h5, h6 {
     font-family: "IBM Plex Mono", monospace;
 }
 
+.masttail {
+  border-top: 1px solid #eee;
+  margin-top: .3rem;
+  margin-bottom: .5rem;
+}
+.masttail-content {
+  color: #505050;
+  font-size: .75rem;
+}
+
 @media (max-width: 48rem) {
   .masthead-title {
     text-align: center;
