--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -320,17 +320,31 @@ a.sidebar-nav-item:focus {
   color: #303030;
   font-family: "Cardo";
   padding-bottom: .3rem;
+  margin-bottom: 0;
 }
 
 .post-listing {
-    margin-top: 1rem;
-    margin-bottom: 1rem;
+    padding-top: .7rem;
+    padding-bottom: .5rem;
     border-bottom: 1.5px solid;
     color: #eee;
 }
 .post-listing h1 {
-    margin-top: 0rem;
-    margin-bottom: .5rem;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+.post-listing-container p {
+    color: #303030;
+    font-family: "PT Serif";
+    margin-top: 0;
+    margin-left: 1rem;
+    margin-bottom: 0;
+}
+.post-listing-container,
+.post-container {
+    margin-left: 0.5rem;
+    border-left: 1.5px solid;
+    color: #eee;
 }
 
 .page-title,
