--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -93,6 +93,7 @@ h1, h2, h3, h4, h5, h6 {
  */
 
 .masthead {
+  height: 71.25px;
   padding-top:    1rem;
   padding-bottom: 1rem;
   margin-bottom: 1rem;
@@ -154,6 +155,7 @@ h1, h2, h3, h4, h5, h6 {
 
 /* Style and "hide" the sidebar */
 .sidebar {
+  z-index: 999;
   position: fixed;
   top: 0;
   bottom: 0;
@@ -203,7 +205,7 @@ a.sidebar-nav-item:focus {
 
 @media (min-width: 48rem) {
   .sidebar-item {
-    padding: 1.5rem;
+    height: 70.25px;
   }
   .sidebar-nav-item {
     padding-left:  1.5rem;
@@ -218,6 +220,7 @@ a.sidebar-nav-item:focus {
 
 /* Style the `label` that we use to target the `.sidebar-checkbox` */
 .sidebar-toggle {
+  z-index: 1000;
   position: absolute;
   top:  1rem;
   left: 1rem;
