--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,11 @@ layout: default
 ---
 
 <div class="post">
+  <div class="post-title-block">
   <h1 class="post-title">{{ page.title }}</h1>
+    {% if page.caption %}
+	<h3>{{ page.caption }}</h3>
+    {% endif %}
+  </div>
   {{ content }}
 </div>
