--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,13 +1,41 @@
----
-layout: default
----
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
 
-<div class="post">
-  <div class="post-title-block">
-  <h1 class="post-title">{{ page.title }}</h1>
-    {% if page.caption %}
-	<h3>{{ page.caption }}</h3>
-    {% endif %}
-  </div>
-  {{ content }}
-</div>
+  {% include head.html %}
+
+  <body>
+
+    {% include sidebar.html %}
+
+    <!-- Wrap is the content to shift when toggling the sidebar. We wrap the
+         content to avoid any CSS collisions with our real content. -->
+      <div class="masthead">
+        <div class="container">
+          <label for="sidebar-checkbox" class="sidebar-toggle"></label>
+		  <h1 class="post-title">{{ page.title }}</h1>
+        </div>
+      </div>
+      <div class="container content">
+		<div class="post">
+		  <div class="post-title-block">
+		    {% if page.caption %}
+			<h3>{{ page.caption }}</h3>
+		    {% endif %}
+		  </div>
+		  {{ content }}
+		</div>
+      </div>
+    <footer>
+      <div class="masttail">
+	<div class="container">
+	  <center>
+	    <h4 class="masttail-content">
+	      {% include content_license_link_longform.html %}
+	    </h4>
+	  </center>
+	</div>
+      </div>
+    </footer>
+  </body>
+</html>
+
