--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -81,7 +81,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 @media (min-width: 56rem) {
   .container {
-    max-width: 38rem;
+    max-width: 46rem;
   }
 }
 
@@ -93,7 +93,7 @@ h1, h2, h3, h4, h5, h6 {
  */
 
 .masthead {
-  height: 71.25px;
+  height: fit-content;
   padding-top:    1rem;
   padding-bottom: 1rem;
   margin-bottom: 1rem;
