--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -88,13 +88,14 @@ h1 {
   font-size: 2rem;
 }
 h2 {
-  margin-top: 0.5rem;
+  margin-top: 2rem;
   margin-bottom: 0.4rem;
   font-size: 1.5rem;
 }
 h3 {
-  margin-top: 0.5rem;
-  margin-bottom: 0.3rem;
+  font-weight: bold;
+  margin-top: 1.5rem;
+  margin-bottom: 0.7rem;
   font-size: 1.25rem;
 }
 h4, h5, h6 {
