Adding repair links post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,7 @@
 		<div class="post">
 		  <div class="post-title-block">
 		    {% if page.caption %}
-			<h3>{{ page.caption }}</h3>
+			<h3 class=page-caption>{{ page.caption }}</h3>
 		    {% endif %}
 		  </div>
 		  {{ content }}
