--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -51,6 +51,13 @@ h1, h2, h3, h4, h5, h6 {
   letter-spacing: -.025rem;
 }
 
+h3 {
+  font-weight: 600;
+}
+
+.page-caption {
+  font-weight: 400;
+}
 /*
  * Wrapper
  *
