--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -93,7 +93,7 @@ h2 {
   font-size: 1.5rem;
 }
 h3 {
-  font-weight: bold;
+  font-weight: 600;
   margin-top: 1.5rem;
   margin-bottom: 0.7rem;
   font-size: 1.25rem;
